--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>这是一个H1标题</h1>
     <h1>这是一个H1标题</h1>
     <h1>小小</h1>
-    <h1>小小1</h1>
+    <h1>这是一个H1标题</h1>
      <h1>小小2</h1>
+    <h1>这是一个H1标题</h1>
 </body>
 </html>
